--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "backend-assignment",
   "version": "1.0.0",
   "description": "## Assignment Description:",
-  "main": "index.js",
+  "main": "src/server.js",
   "scripts": {
-    "start": "node server.js",
-    "watch": "nodemon server.js",
+    "start": "node src/server.js",
+    "watch": "nodemon src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
